--- a/build.gradle
+++ b/build.gradle
@@ -80,9 +80,9 @@ dependencies {
 	compileOnly fg.deobf("mezz.jei:jei-1.16.5:7.7.1.2:api")
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:7.7.1.2")
 
-    compileOnly 'org.nd4j:nd4j-native:1.0.0-M1.1'
-    compileOnly 'org.deeplearning4j:deeplearning4j-core:1.0.0-M1.1'
-    compileOnly 'org.deeplearning4j:rl4j-core:1.0.0-M1.1'
+    implementation 'org.nd4j:nd4j-native-platform:1.0.0-M1.1'
+    implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-M1.1'
+    implementation 'org.deeplearning4j:rl4j-core:1.0.0-M1.1'
 }
 
 jar {
