--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ dependencies {
 
     implementation 'org.nd4j:nd4j-native-platform:1.0.0-M1.1'
     implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-M1.1'
+    implementation 'org.deeplearning4j:deeplearning4j-ui:1.0.0-M1.1'
     implementation 'org.deeplearning4j:rl4j-core:1.0.0-M1.1'
 }
 
